@@ -1,0 +1,4 @@
+     [echo] some message5
+
+test6:
+     [echo] some message6
