@@ -1,0 +1,1 @@
+     [echo] some message6
