@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+<project name="recorder-test" default="test6" basedir=".">
+
+    <property name="recin" location="recorder"/>
+    <property name="recdir" location="recorder-out"/>
+
+    <target name="test6">
+        <record name="${recdir}/rectest6.log" action="start" />
+        <echo message="some message6"/>
+        <record name="${recdir}/rectest6.log" action="stop" />
+    </target>
+</project>
